--- a/8_puzzle_main.ipynb
+++ b/8_puzzle_main.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Bowasia/8-puzzle-solver/blob/v.1/8_puzzle_main.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Bowasia/8-puzzle-solver/blob/v.2/8_puzzle_main.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -387,7 +387,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "db3cdffd-ca14-439a-bf9c-c361d4a9ee2d"
+        "outputId": "941398b3-de90-443b-d00b-7c67808e33a2"
       },
       "source": [
         "\"\"\"\n",
@@ -412,11 +412,16 @@
         "\n",
         "  path = []\n",
         "  result = []\n",
+        "  check = {}\n",
+        "  gen = 0\n",
+        "  max_dept = 0\n",
         "\n",
         "  path.append([[puzzle,\"START\",0,h_score(puzzle,goal),h_score(puzzle,goal)]])\n",
         "  #print(path)\n",
         "    \n",
         "  while len(path) != 0:\n",
+        "    if gen % 500 == 0:\n",
+        "      print(\"Generation: \",gen)\n",
         "\n",
         "    #sort path with the f score\n",
         "    path = sorted(path,key= lambda x:x[-1][-1])\n",
@@ -439,18 +444,18 @@
         "    current_h = current_state[3]\n",
         "    current_f = current_state[4]\n",
         "\n",
+        "    # Check max_dept\n",
+        "    if current_g + 1 > max_dept:\n",
+        "      max_dept = current_g + 1\n",
+        "      print(\"Dept: \",max_dept)\n",
+        "\n",
         "    #generate possible state into the path\n",
         "    #print(\"Current route = \",current_route)\n",
         "    #print(\"Current state = \",current_state)\n",
         "    next_state = gen_state(current_puzzle,possible_dir(current_puzzle))\n",
         "    #print(next_state)\n",
         "\n",
-        "    # remove repeat state\n",
-        "    for item in current_route:\n",
-        "        for dir in next_state:\n",
-        "          repeat = item[0] == dir[0]\n",
-        "          if repeat:\n",
-        "            next_state.remove(dir)\n",
+        "\n",
         "\n",
         "    # remove dead end\n",
         "    if len(next_state) == 0:\n",
@@ -467,14 +472,27 @@
         "      state.append(h)\n",
         "      state.append(g+h)\n",
         "\n",
+        "      # check\n",
+        "      if state[0] in check:\n",
+        "        if (check[state[0]] < g or check[state[0]] == g):\n",
+        "          pass\n",
+        "        elif (g < check[state[0]]):\n",
+        "          check[state[0]] = g\n",
+        "          next_route.append(state)\n",
+        "      else:\n",
+        "        check[state[0]] = g\n",
+        "        next_route.append(state)\n",
+        "\n",
         "      # add new state to the route\n",
-        "      next_route.append(state)\n",
+        "      #next_route.append(state)\n",
         "\n",
         "      #add new route to the path\n",
         "      path.append(next_route)\n",
         "\n",
         "    # remove explored route  \n",
         "    path.pop(0)\n",
+        "\n",
+        "    gen += 1\n",
         "    \n",
         "\n",
         "  return result\n",
@@ -486,127 +504,86 @@
         "solution = solve(x,\"123456780\")\n",
         "show_puzzle(solution)"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Reach the goal with this route [['152703468', 'START', 0, 10, 10], ['152073468', 'LEFT', 1, 12, 13], ['152473068', 'DOWN', 2, 10, 12], ['152473608', 'RIGHT', 3, 10, 13], ['152403678', 'UP', 4, 10, 14], ['102453678', 'UP', 5, 10, 15], ['012453678', 'LEFT', 6, 12, 18], ['412053678', 'DOWN', 7, 12, 19], ['412653078', 'DOWN', 8, 10, 18], ['412653708', 'RIGHT', 9, 8, 17], ['412603758', 'UP', 10, 10, 20], ['412063758', 'LEFT', 11, 10, 21], ['012463758', 'UP', 12, 10, 22], ['102463758', 'RIGHT', 13, 8, 21], ['120463758', 'RIGHT', 14, 6, 20], ['123460758', 'DOWN', 15, 4, 19], ['123406758', 'LEFT', 16, 4, 20], ['123456708', 'DOWN', 17, 2, 19], ['123456780', 'RIGHT', 18, 0, 18]]\n",
-            "Step 0: START| g = 0 h = 10 f = 10\n",
-            "152703468\n",
-            "1 5 2\n",
-            "7 0 3\n",
-            "4 6 8\n",
-            "\n",
-            "Step 1: LEFT| g = 1 h = 12 f = 13\n",
-            "152073468\n",
-            "1 5 2\n",
-            "0 7 3\n",
-            "4 6 8\n",
-            "\n",
-            "Step 2: DOWN| g = 2 h = 10 f = 12\n",
-            "152473068\n",
-            "1 5 2\n",
-            "4 7 3\n",
-            "0 6 8\n",
-            "\n",
-            "Step 3: RIGHT| g = 3 h = 10 f = 13\n",
-            "152473608\n",
-            "1 5 2\n",
-            "4 7 3\n",
-            "6 0 8\n",
-            "\n",
-            "Step 4: UP| g = 4 h = 10 f = 14\n",
-            "152403678\n",
-            "1 5 2\n",
-            "4 0 3\n",
-            "6 7 8\n",
-            "\n",
-            "Step 5: UP| g = 5 h = 10 f = 15\n",
-            "102453678\n",
-            "1 0 2\n",
-            "4 5 3\n",
-            "6 7 8\n",
-            "\n",
-            "Step 6: LEFT| g = 6 h = 12 f = 18\n",
-            "012453678\n",
-            "0 1 2\n",
-            "4 5 3\n",
-            "6 7 8\n",
-            "\n",
-            "Step 7: DOWN| g = 7 h = 12 f = 19\n",
-            "412053678\n",
-            "4 1 2\n",
-            "0 5 3\n",
-            "6 7 8\n",
-            "\n",
-            "Step 8: DOWN| g = 8 h = 10 f = 18\n",
-            "412653078\n",
-            "4 1 2\n",
-            "6 5 3\n",
-            "0 7 8\n",
-            "\n",
-            "Step 9: RIGHT| g = 9 h = 8 f = 17\n",
-            "412653708\n",
-            "4 1 2\n",
-            "6 5 3\n",
-            "7 0 8\n",
-            "\n",
-            "Step 10: UP| g = 10 h = 10 f = 20\n",
-            "412603758\n",
-            "4 1 2\n",
-            "6 0 3\n",
-            "7 5 8\n",
-            "\n",
-            "Step 11: LEFT| g = 11 h = 10 f = 21\n",
-            "412063758\n",
-            "4 1 2\n",
-            "0 6 3\n",
-            "7 5 8\n",
-            "\n",
-            "Step 12: UP| g = 12 h = 10 f = 22\n",
-            "012463758\n",
-            "0 1 2\n",
-            "4 6 3\n",
-            "7 5 8\n",
-            "\n",
-            "Step 13: RIGHT| g = 13 h = 8 f = 21\n",
-            "102463758\n",
-            "1 0 2\n",
-            "4 6 3\n",
-            "7 5 8\n",
-            "\n",
-            "Step 14: RIGHT| g = 14 h = 6 f = 20\n",
-            "120463758\n",
-            "1 2 0\n",
-            "4 6 3\n",
-            "7 5 8\n",
-            "\n",
-            "Step 15: DOWN| g = 15 h = 4 f = 19\n",
-            "123460758\n",
-            "1 2 3\n",
-            "4 6 0\n",
-            "7 5 8\n",
-            "\n",
-            "Step 16: LEFT| g = 16 h = 4 f = 20\n",
-            "123406758\n",
-            "1 2 3\n",
-            "4 0 6\n",
-            "7 5 8\n",
-            "\n",
-            "Step 17: DOWN| g = 17 h = 2 f = 19\n",
-            "123456708\n",
-            "1 2 3\n",
-            "4 5 6\n",
-            "7 0 8\n",
-            "\n",
-            "Step 18: RIGHT| g = 18 h = 0 f = 18\n",
-            "123456780\n",
-            "1 2 3\n",
-            "4 5 6\n",
-            "7 8 0\n",
-            "\n"
+            "Generation:  0\n",
+            "Generation:  500\n",
+            "Generation:  1000\n",
+            "Generation:  1500\n",
+            "Generation:  2000\n",
+            "Generation:  2500\n",
+            "Generation:  3000\n",
+            "Generation:  3500\n",
+            "Generation:  4000\n",
+            "Generation:  4500\n",
+            "Generation:  5000\n",
+            "Generation:  5500\n",
+            "Generation:  6000\n",
+            "Generation:  6500\n",
+            "Generation:  7000\n",
+            "Generation:  7500\n",
+            "Generation:  8000\n",
+            "Generation:  8500\n",
+            "Generation:  9000\n",
+            "Generation:  9500\n",
+            "Generation:  10000\n",
+            "Generation:  10500\n",
+            "Generation:  11000\n",
+            "Generation:  11500\n",
+            "Generation:  12000\n",
+            "Generation:  12500\n",
+            "Generation:  13000\n",
+            "Generation:  13500\n",
+            "Generation:  14000\n",
+            "Generation:  14500\n",
+            "Generation:  15000\n",
+            "Generation:  15500\n",
+            "Generation:  16000\n",
+            "Generation:  16500\n",
+            "Generation:  17000\n",
+            "Generation:  17500\n",
+            "Generation:  18000\n",
+            "Generation:  18500\n",
+            "Generation:  19000\n",
+            "Generation:  19500\n",
+            "Generation:  20000\n",
+            "Generation:  20500\n",
+            "Generation:  21000\n",
+            "Generation:  21500\n",
+            "Generation:  22000\n",
+            "Generation:  22500\n",
+            "Generation:  23000\n",
+            "Generation:  23500\n",
+            "Generation:  24000\n",
+            "Generation:  24500\n",
+            "Generation:  25000\n",
+            "Generation:  25500\n",
+            "Generation:  26000\n",
+            "Generation:  26500\n",
+            "Generation:  27000\n",
+            "Generation:  27500\n",
+            "Generation:  28000\n",
+            "Generation:  28500\n",
+            "Generation:  29000\n",
+            "Generation:  29500\n",
+            "Generation:  30000\n",
+            "Generation:  30500\n",
+            "Generation:  31000\n",
+            "Generation:  31500\n",
+            "Generation:  32000\n",
+            "Generation:  32500\n",
+            "Generation:  33000\n",
+            "Generation:  33500\n",
+            "Generation:  34000\n",
+            "Generation:  34500\n",
+            "Generation:  35000\n",
+            "Generation:  35500\n",
+            "Generation:  36000\n",
+            "Generation:  36500\n"
           ]
         }
       ]
