confirm done function

--- a/8_puzzle_main.ipynb
+++ b/8_puzzle_main.ipynb
@@ -68,7 +68,7 @@
         "  \"\"\"\n",
         "  pass\n",
         "\n",
-        "def findIndx(puzzle,num):\n",
+        "def findIndx(puzzle,num): # DONE\n",
         "  \"\"\" Find index of 0 i x j \"\"\"\n",
         "  index = puzzle.find(num)\n",
         "  i = index // 3\n",
@@ -104,7 +104,7 @@
         "\n",
         "  return result \n",
         "\n",
-        "def gen_state(puzzle, possible_dir):\n",
+        "def gen_state(puzzle, possible_dir): # DONE\n",
         "  \"\"\"\n",
         "  input = \"024163587\", [\"RIGHT\", \"DOWN\"]\n",
         "  0 2 4\n",
@@ -156,7 +156,7 @@
         "  \"\"\"\n",
         "  return new_puzzle\n",
         "\n",
-        "def h_score(puzzle,goal):\n",
+        "def h_score(puzzle,goal): # DONE\n",
         "  \"\"\" \n",
         "  different between current and final state \n",
         "  input = \"024163587\",\"123456780\"\n",
@@ -190,7 +190,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -220,7 +220,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
