--- a/8_puzzle_main.ipynb
+++ b/8_puzzle_main.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Bowasia/8-puzzle-solver/blob/v.2/8_puzzle_main.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Bowasia/8-puzzle-solver/blob/v.final/8_puzzle_main.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -185,9 +185,9 @@
         "  for i in range(len(route)):\n",
         "    puzzle = route[i][0]\n",
         "    text = route[i][1]\n",
-        "    g = route[i][2]\n",
-        "    h = route[i][3]\n",
-        "    f = route[i][-1]\n",
+        "    g = i\n",
+        "    h = route[i][2]\n",
+        "    f = g + h\n",
         "    print(\"Step {}: {}| g = {} h = {} f = {}\".format(i,text,g,h,f))\n",
         "    print(puzzle)\n",
         "    for k in range(0,9,3):\n",
@@ -197,188 +197,8 @@
         "\n",
         "\n"
       ],
-      "execution_count": 67,
+      "execution_count": 9,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "P8gQHHYT8NwC",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "755ab90b-e1a7-4720-b3ec-c7f995b0c8f1"
-      },
-      "source": [
-        "\n",
-        "a = [\"0\", \"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\"]\n",
-        "random.shuffle(a)\n",
-        "puzzle = \"\".join(a)\n",
-        "goal = \"123456780\"\n",
-        "puzzle = \"156042837\"\n",
-        "puzzle = \"123405678\"\n",
-        "#puzzle = \"152703468\"\n",
-        "\n",
-        "\n",
-        "def check(puzzle):\n",
-        "  show_puzzle(puzzle)\n",
-        "  print(possible_dir(puzzle))\n",
-        "  print(gen_state(puzzle,possible_dir(puzzle)))\n",
-        "  \n",
-        "#check(puzzle)\n",
-        "\n",
-        "#print(f_score(puzzle,goal))\n",
-        "\n",
-        "\"\"\"\n",
-        "findIndx(puzzle,num) -> output as an i,j coordinate\n",
-        "\n",
-        "possible_dir(puzzle) -> [\"RIGHT\",\"DOWN\"]\n",
-        "gen_state(puzzle,possible_dir) -> input the list output the list of state\n",
-        "h_score(puzzle,goal)  -> h_score\n",
-        "\"\"\"\n",
-        "\n",
-        "def solve(start, goal):\n",
-        "  puzzle = start[:]\n",
-        "  seq = []\n",
-        "  pre = findIndx(puzzle,\"0\")\n",
-        "  c = 0\n",
-        "  while puzzle != goal:\n",
-        "    \n",
-        "    # check repeated pattern\n",
-        "    move = gen_state(puzzle,possible_dir(puzzle))\n",
-        "    #print(\"befor remove \",move)\n",
-        "    for item in seq:\n",
-        "      for dir in move:\n",
-        "        repeat = item[0] == dir[0]\n",
-        "        if repeat:\n",
-        "          move.remove(dir)\n",
-        "    #print(\"After remove \",move)\n",
-        "    \n",
-        "    # Find the least f score\n",
-        "    least_score = 0\n",
-        "    if len(move) != 1:\n",
-        "      for s in range(len(move)-1):\n",
-        "        if h_score(move[s][0],goal) > h_score(move[s+1][0],goal): # fix this please ชนไม่ครบคู่\n",
-        "          least_score = s + 1\n",
-        "    show_puzzle(move[least_score][0])\n",
-        "    print(\"\")\n",
-        "    print(c)\n",
-        "    c += 1\n",
-        "    seq.append(move[least_score])\n",
-        "    puzzle = move[least_score][0]\n",
-        "    #print(seq)\n",
-        "    \n",
-        "\n",
-        "  return seq\n",
-        " \n",
-        "\n",
-        "\n",
-        "solve(puzzle, goal)\n",
-        "\n",
-        "\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1 2 3\n",
-            "4 5 0\n",
-            "6 7 8\n",
-            "\n",
-            "0\n",
-            "1 2 3\n",
-            "4 5 8\n",
-            "6 7 0\n",
-            "\n",
-            "1\n",
-            "1 2 3\n",
-            "4 5 8\n",
-            "6 0 7\n",
-            "\n",
-            "2\n",
-            "1 2 3\n",
-            "4 5 8\n",
-            "0 6 7\n",
-            "\n",
-            "3\n",
-            "1 2 3\n",
-            "0 5 8\n",
-            "4 6 7\n",
-            "\n",
-            "4\n",
-            "1 2 3\n",
-            "5 0 8\n",
-            "4 6 7\n",
-            "\n",
-            "5\n",
-            "1 2 3\n",
-            "5 6 8\n",
-            "4 0 7\n",
-            "\n",
-            "6\n",
-            "1 2 3\n",
-            "5 6 8\n",
-            "4 7 0\n",
-            "\n",
-            "7\n",
-            "1 2 3\n",
-            "5 6 0\n",
-            "4 7 8\n",
-            "\n",
-            "8\n",
-            "1 2 3\n",
-            "5 0 6\n",
-            "4 7 8\n",
-            "\n",
-            "9\n",
-            "1 2 3\n",
-            "0 5 6\n",
-            "4 7 8\n",
-            "\n",
-            "10\n",
-            "1 2 3\n",
-            "4 5 6\n",
-            "0 7 8\n",
-            "\n",
-            "11\n",
-            "1 2 3\n",
-            "4 5 6\n",
-            "7 0 8\n",
-            "\n",
-            "12\n",
-            "1 2 3\n",
-            "4 5 6\n",
-            "7 8 0\n",
-            "\n",
-            "13\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[['123450678', 'RIGHT'],\n",
-              " ['123458670', 'DOWN'],\n",
-              " ['123458607', 'LEFT'],\n",
-              " ['123458067', 'LEFT'],\n",
-              " ['123058467', 'UP'],\n",
-              " ['123508467', 'RIGHT'],\n",
-              " ['123568407', 'DOWN'],\n",
-              " ['123568470', 'RIGHT'],\n",
-              " ['123560478', 'UP'],\n",
-              " ['123506478', 'LEFT'],\n",
-              " ['123056478', 'LEFT'],\n",
-              " ['123456078', 'DOWN'],\n",
-              " ['123456708', 'RIGHT'],\n",
-              " ['123456780', 'RIGHT']]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 2
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -387,7 +207,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "941398b3-de90-443b-d00b-7c67808e33a2"
+        "outputId": "4efbdbc1-7e07-41cb-ed0a-e6da7c1ee6f9"
       },
       "source": [
         "\"\"\"\n",
@@ -412,90 +232,72 @@
         "\n",
         "  path = []\n",
         "  result = []\n",
-        "  check = {}\n",
+        "  check = {puzzle:1}\n",
         "  gen = 0\n",
-        "  max_dept = 0\n",
+        "  dept = 0\n",
         "\n",
-        "  path.append([[puzzle,\"START\",0,h_score(puzzle,goal),h_score(puzzle,goal)]])\n",
+        "  path.append([[puzzle,\"START\",h_score(puzzle,goal)]])\n",
         "  #print(path)\n",
         "    \n",
-        "  while len(path) != 0:\n",
-        "    if gen % 500 == 0:\n",
-        "      print(\"Generation: \",gen)\n",
+        "  while path:\n",
         "\n",
-        "    #sort path with the f score\n",
-        "    path = sorted(path,key= lambda x:x[-1][-1])\n",
-        "    \n",
-        "    #sort path again with the smallest step to make step count first priority\n",
-        "    path = sorted(path,key= lambda x:x[-1][2])\n",
-        "\n",
-        "    #check if win\n",
-        "    if path[0][-1][0] == goal:\n",
-        "      result = path[0]\n",
-        "      print(\"Reach the goal with this route\",result)\n",
-        "      break\n",
-        "\n",
-        "    #choose route and state to continue\n",
-        "    current_route = copy.deepcopy(path[0])\n",
-        "    current_state = current_route[-1]\n",
-        "    current_puzzle = current_state[0]\n",
-        "\n",
-        "    current_g = current_state[2]\n",
-        "    current_h = current_state[3]\n",
-        "    current_f = current_state[4]\n",
-        "\n",
-        "    # Check max_dept\n",
-        "    if current_g + 1 > max_dept:\n",
-        "      max_dept = current_g + 1\n",
-        "      print(\"Dept: \",max_dept)\n",
-        "\n",
-        "    #generate possible state into the path\n",
-        "    #print(\"Current route = \",current_route)\n",
-        "    #print(\"Current state = \",current_state)\n",
-        "    next_state = gen_state(current_puzzle,possible_dir(current_puzzle))\n",
-        "    #print(next_state)\n",
-        "\n",
-        "\n",
-        "\n",
-        "    # remove dead end\n",
-        "    if len(next_state) == 0:\n",
-        "      path.pop(0)\n",
-        "      continue\n",
-        "\n",
-        "    for state in next_state:\n",
-        "      next_route = copy.deepcopy(current_route)\n",
-        "      #next_route = current_route.copy()\n",
-        "      g = current_g + 1\n",
-        "      h = h_score(state[0],goal)\n",
-        "\n",
-        "      state.append(g)\n",
-        "      state.append(h)\n",
-        "      state.append(g+h)\n",
-        "\n",
-        "      # check\n",
-        "      if state[0] in check:\n",
-        "        if (check[state[0]] < g or check[state[0]] == g):\n",
-        "          pass\n",
-        "        elif (g < check[state[0]]):\n",
-        "          check[state[0]] = g\n",
-        "          next_route.append(state)\n",
-        "      else:\n",
-        "        check[state[0]] = g\n",
-        "        next_route.append(state)\n",
-        "\n",
-        "      # add new state to the route\n",
-        "      #next_route.append(state)\n",
-        "\n",
-        "      #add new route to the path\n",
-        "      path.append(next_route)\n",
-        "\n",
-        "    # remove explored route  \n",
-        "    path.pop(0)\n",
-        "\n",
+        "    # show generation\n",
+        "    if gen % 1000 == 0:\n",
+        "      print(\"Gen: \", gen)\n",
         "    gen += 1\n",
-        "    \n",
         "\n",
-        "  return result\n",
+        "    # choose route and declare puzzle to work on\n",
+        "    current_route = path.pop(0)\n",
+        "    current_puzzle = current_route[-1][0]\n",
+        "\n",
+        "    # check if win\n",
+        "    if current_puzzle == goal:\n",
+        "      route = current_route\n",
+        "      return route\n",
+        "    \n",
+        "    # declare g score\n",
+        "    g = len(current_route)\n",
+        "\n",
+        "    # if the current_puzzle already visited once with different step then abandon this route\n",
+        "    # it will remove the route with that visite the same puzzle but take more move\n",
+        "    if check[current_puzzle] != g:\n",
+        "      continue \n",
+        "\n",
+        "    # generate possible move of blank space or \"0\" in this case\n",
+        "    next_state = gen_state(current_puzzle,possible_dir(current_puzzle))\n",
+        "\n",
+        "    # consider if the next state should be add to the route or not\n",
+        "    for state in next_state:\n",
+        "\n",
+        "      # declare puzzle and g score of the state\n",
+        "      state_puzzle = state[0]\n",
+        "      state_g = g + 1\n",
+        "\n",
+        "      # check if this puzzle have been visited before\n",
+        "      if state_puzzle in check:\n",
+        "\n",
+        "        # if visited before but g score is less than the recent then\n",
+        "        # change the visted puzzle to the lesser one\n",
+        "        if  state_g < check[state_puzzle]:\n",
+        "          check[state_puzzle] = state_g\n",
+        "          to_add_state = copy.deepcopy(current_route)\n",
+        "          state.append(h_score(state_puzzle,goal))\n",
+        "          to_add_state.append(state)\n",
+        "\n",
+        "          path.append(to_add_state)\n",
+        "\n",
+        "        # if visited before but g score is higher then do nothing\n",
+        "\n",
+        "      # if never visited before then add the data to dictionary \"check\" and add to path\n",
+        "      else:\n",
+        "        check[state_puzzle] = state_g\n",
+        "        to_add_state = copy.deepcopy(current_route)\n",
+        "        state.append(h_score(state_puzzle,goal))\n",
+        "        to_add_state.append(state)\n",
+        "        path.append(to_add_state)\n",
+        "\n",
+        "    # sort route according to the step (lengt of the route list) and h score respectively\n",
+        "    path = sorted(path, key= lambda x: (len(x), x[-1][-1]))\n",
         "\n",
         "\n",
         "x = \"152703468\"\n",
@@ -504,86 +306,148 @@
         "solution = solve(x,\"123456780\")\n",
         "show_puzzle(solution)"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Generation:  0\n",
-            "Generation:  500\n",
-            "Generation:  1000\n",
-            "Generation:  1500\n",
-            "Generation:  2000\n",
-            "Generation:  2500\n",
-            "Generation:  3000\n",
-            "Generation:  3500\n",
-            "Generation:  4000\n",
-            "Generation:  4500\n",
-            "Generation:  5000\n",
-            "Generation:  5500\n",
-            "Generation:  6000\n",
-            "Generation:  6500\n",
-            "Generation:  7000\n",
-            "Generation:  7500\n",
-            "Generation:  8000\n",
-            "Generation:  8500\n",
-            "Generation:  9000\n",
-            "Generation:  9500\n",
-            "Generation:  10000\n",
-            "Generation:  10500\n",
-            "Generation:  11000\n",
-            "Generation:  11500\n",
-            "Generation:  12000\n",
-            "Generation:  12500\n",
-            "Generation:  13000\n",
-            "Generation:  13500\n",
-            "Generation:  14000\n",
-            "Generation:  14500\n",
-            "Generation:  15000\n",
-            "Generation:  15500\n",
-            "Generation:  16000\n",
-            "Generation:  16500\n",
-            "Generation:  17000\n",
-            "Generation:  17500\n",
-            "Generation:  18000\n",
-            "Generation:  18500\n",
-            "Generation:  19000\n",
-            "Generation:  19500\n",
-            "Generation:  20000\n",
-            "Generation:  20500\n",
-            "Generation:  21000\n",
-            "Generation:  21500\n",
-            "Generation:  22000\n",
-            "Generation:  22500\n",
-            "Generation:  23000\n",
-            "Generation:  23500\n",
-            "Generation:  24000\n",
-            "Generation:  24500\n",
-            "Generation:  25000\n",
-            "Generation:  25500\n",
-            "Generation:  26000\n",
-            "Generation:  26500\n",
-            "Generation:  27000\n",
-            "Generation:  27500\n",
-            "Generation:  28000\n",
-            "Generation:  28500\n",
-            "Generation:  29000\n",
-            "Generation:  29500\n",
-            "Generation:  30000\n",
-            "Generation:  30500\n",
-            "Generation:  31000\n",
-            "Generation:  31500\n",
-            "Generation:  32000\n",
-            "Generation:  32500\n",
-            "Generation:  33000\n",
-            "Generation:  33500\n",
-            "Generation:  34000\n",
-            "Generation:  34500\n",
-            "Generation:  35000\n",
-            "Generation:  35500\n",
-            "Generation:  36000\n",
-            "Generation:  36500\n"
+            "Gen:  0\n",
+            "Gen:  1000\n",
+            "Gen:  2000\n",
+            "Gen:  3000\n",
+            "Gen:  4000\n",
+            "Gen:  5000\n",
+            "Gen:  6000\n",
+            "Gen:  7000\n",
+            "Gen:  8000\n",
+            "Gen:  9000\n",
+            "Gen:  10000\n",
+            "Gen:  11000\n",
+            "Gen:  12000\n",
+            "Gen:  13000\n",
+            "Gen:  14000\n",
+            "Gen:  15000\n",
+            "Gen:  16000\n",
+            "Gen:  17000\n",
+            "Gen:  18000\n",
+            "Gen:  19000\n",
+            "Gen:  20000\n",
+            "Gen:  21000\n",
+            "Step 0: START| g = 0 h = 10 f = 10\n",
+            "152703468\n",
+            "1 5 2\n",
+            "7 0 3\n",
+            "4 6 8\n",
+            "\n",
+            "Step 1: LEFT| g = 1 h = 12 f = 13\n",
+            "152073468\n",
+            "1 5 2\n",
+            "0 7 3\n",
+            "4 6 8\n",
+            "\n",
+            "Step 2: DOWN| g = 2 h = 10 f = 12\n",
+            "152473068\n",
+            "1 5 2\n",
+            "4 7 3\n",
+            "0 6 8\n",
+            "\n",
+            "Step 3: RIGHT| g = 3 h = 10 f = 13\n",
+            "152473608\n",
+            "1 5 2\n",
+            "4 7 3\n",
+            "6 0 8\n",
+            "\n",
+            "Step 4: UP| g = 4 h = 10 f = 14\n",
+            "152403678\n",
+            "1 5 2\n",
+            "4 0 3\n",
+            "6 7 8\n",
+            "\n",
+            "Step 5: UP| g = 5 h = 10 f = 15\n",
+            "102453678\n",
+            "1 0 2\n",
+            "4 5 3\n",
+            "6 7 8\n",
+            "\n",
+            "Step 6: LEFT| g = 6 h = 12 f = 18\n",
+            "012453678\n",
+            "0 1 2\n",
+            "4 5 3\n",
+            "6 7 8\n",
+            "\n",
+            "Step 7: DOWN| g = 7 h = 12 f = 19\n",
+            "412053678\n",
+            "4 1 2\n",
+            "0 5 3\n",
+            "6 7 8\n",
+            "\n",
+            "Step 8: DOWN| g = 8 h = 10 f = 18\n",
+            "412653078\n",
+            "4 1 2\n",
+            "6 5 3\n",
+            "0 7 8\n",
+            "\n",
+            "Step 9: RIGHT| g = 9 h = 8 f = 17\n",
+            "412653708\n",
+            "4 1 2\n",
+            "6 5 3\n",
+            "7 0 8\n",
+            "\n",
+            "Step 10: UP| g = 10 h = 10 f = 20\n",
+            "412603758\n",
+            "4 1 2\n",
+            "6 0 3\n",
+            "7 5 8\n",
+            "\n",
+            "Step 11: LEFT| g = 11 h = 10 f = 21\n",
+            "412063758\n",
+            "4 1 2\n",
+            "0 6 3\n",
+            "7 5 8\n",
+            "\n",
+            "Step 12: UP| g = 12 h = 10 f = 22\n",
+            "012463758\n",
+            "0 1 2\n",
+            "4 6 3\n",
+            "7 5 8\n",
+            "\n",
+            "Step 13: RIGHT| g = 13 h = 8 f = 21\n",
+            "102463758\n",
+            "1 0 2\n",
+            "4 6 3\n",
+            "7 5 8\n",
+            "\n",
+            "Step 14: RIGHT| g = 14 h = 6 f = 20\n",
+            "120463758\n",
+            "1 2 0\n",
+            "4 6 3\n",
+            "7 5 8\n",
+            "\n",
+            "Step 15: DOWN| g = 15 h = 4 f = 19\n",
+            "123460758\n",
+            "1 2 3\n",
+            "4 6 0\n",
+            "7 5 8\n",
+            "\n",
+            "Step 16: LEFT| g = 16 h = 4 f = 20\n",
+            "123406758\n",
+            "1 2 3\n",
+            "4 0 6\n",
+            "7 5 8\n",
+            "\n",
+            "Step 17: DOWN| g = 17 h = 2 f = 19\n",
+            "123456708\n",
+            "1 2 3\n",
+            "4 5 6\n",
+            "7 0 8\n",
+            "\n",
+            "Step 18: RIGHT| g = 18 h = 0 f = 18\n",
+            "123456780\n",
+            "1 2 3\n",
+            "4 5 6\n",
+            "7 8 0\n",
+            "\n"
           ]
         }
       ]
