--- a/8_puzzle_main.ipynb
+++ b/8_puzzle_main.ipynb
@@ -32,18 +32,11 @@
         "id": "QJg4JCpp6XCe"
       },
       "source": [
-        "def shuffle():\n",
-        "  \"\"\"\n",
-        "  If possible, generate initial condition\n",
-        "  \"\"\"\n",
-        "  pass\n",
-        "\n",
         "#Project begins here#\n",
-        "\n",
         "import random\n",
         "import copy\n",
         "\n",
-        "def solve():\n",
+        "def solve(puzzle,goal):\n",
         "  \"\"\"\n",
         "  execute function\n",
         "  input = \"024163587\"\n",
@@ -61,12 +54,80 @@
         "  2 0 4\n",
         "  1 6 3\n",
         "  5 8 7\n",
-        "    |\n",
+        "    \n",
         "  Step 2: UP\n",
         "  2 6 4\n",
         "  1 0 3\n",
         "  5 8 7\n",
         "  \"\"\"\n",
+        "  path = []\n",
+        "  result = []\n",
+        "  check = {puzzle:1}\n",
+        "  gen = 0\n",
+        "  dept = 0\n",
+        "\n",
+        "  path.append([[puzzle,\"START\",h_score(puzzle,goal)]])\n",
+        "  #print(path)\n",
+        "    \n",
+        "  while path:\n",
+        "\n",
+        "    # show generation\n",
+        "    if gen % 1000 == 0:\n",
+        "      print(\"Gen: \", gen)\n",
+        "    gen += 1\n",
+        "\n",
+        "    # choose route and declare puzzle to work on\n",
+        "    current_route = path.pop(0)\n",
+        "    current_puzzle = current_route[-1][0]\n",
+        "\n",
+        "    # check if win\n",
+        "    if current_puzzle == goal:\n",
+        "      route = current_route\n",
+        "      return route\n",
+        "    \n",
+        "    # declare g score\n",
+        "    g = len(current_route)\n",
+        "\n",
+        "    # if the current_puzzle already visited once with different step then abandon this route\n",
+        "    # it will remove the route with that visite the same puzzle but take more move\n",
+        "    if check[current_puzzle] != g:\n",
+        "      continue \n",
+        "\n",
+        "    # generate possible move of blank space or \"0\" in this case\n",
+        "    next_state = gen_state(current_puzzle,possible_dir(current_puzzle))\n",
+        "\n",
+        "    # consider if the next state should be add to the route or not\n",
+        "    for state in next_state:\n",
+        "\n",
+        "      # declare puzzle and g score of the state\n",
+        "      state_puzzle = state[0]\n",
+        "      state_g = g + 1\n",
+        "\n",
+        "      # check if this puzzle have been visited before\n",
+        "      if state_puzzle in check:\n",
+        "\n",
+        "        # if visited before but g score is less than the recent then\n",
+        "        # change the visted puzzle to the lesser one\n",
+        "        if  state_g < check[state_puzzle]:\n",
+        "          check[state_puzzle] = state_g\n",
+        "          to_add_state = copy.deepcopy(current_route)\n",
+        "          state.append(h_score(state_puzzle,goal))\n",
+        "          to_add_state.append(state)\n",
+        "\n",
+        "          path.append(to_add_state)\n",
+        "\n",
+        "        # if visited before but g score is higher then do nothing\n",
+        "\n",
+        "      # if never visited before then add the data to dictionary \"check\" and add to path\n",
+        "      else:\n",
+        "        check[state_puzzle] = state_g\n",
+        "        to_add_state = copy.deepcopy(current_route)\n",
+        "        state.append(h_score(state_puzzle,goal))\n",
+        "        to_add_state.append(state)\n",
+        "        path.append(to_add_state)\n",
+        "\n",
+        "    # sort route according to the step (lengt of the route list) and h score respectively\n",
+        "    path = sorted(path, key= lambda x: (len(x), x[-1][-1]))\n",
         "  pass\n",
         "\n",
         "def findIndx(puzzle,num):\n",
@@ -189,7 +250,7 @@
         "    h = route[i][2]\n",
         "    f = g + h\n",
         "    print(\"Step {}: {}| g = {} h = {} f = {}\".format(i,text,g,h,f))\n",
-        "    print(puzzle)\n",
+        "    #print(puzzle)\n",
         "    for k in range(0,9,3):\n",
         "      print(puzzle[k] + \" \" + puzzle[k+1] + \" \" + puzzle[k+2])\n",
         "      \n",
@@ -197,7 +258,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -207,106 +268,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4efbdbc1-7e07-41cb-ed0a-e6da7c1ee6f9"
+        "outputId": "733fb187-a07f-4e5a-8b4d-12a471aa2a65"
       },
       "source": [
-        "\"\"\"\n",
-        "findIndx(puzzle,num) -> output as an i,j coordinate\n",
-        "\n",
-        "possible_dir(puzzle) -> [\"RIGHT\",\"DOWN\"]\n",
-        "gen_state(puzzle,possible_dir) -> input the list output the list of state\n",
-        "h_score(puzzle,goal)  -> h_score\n",
-        "\"\"\"\n",
-        "\n",
-        "#path = [seq,seq]\n",
-        "  #seq = [state,state]\n",
-        "  #state = [puzzle,direction,g,h,f]\n",
-        "\n",
-        "  #a = [[\"123456780\",\"RIGHT\",1,14,16],[\"123450786\",\"UP\",1,12,15],[\"123450786\",\"LEFT\",3,18,19]]\n",
-        "  #b = [[\"123456780\",\"RIGHT\",1,14,16],[\"123450786\",\"UP\",2,12,15],[\"123450786\",\"LEFT\",6,18,24]]\n",
-        "  #path = [b,a]\n",
-        "  #print(sorted(path,key=lambda x:x[-1][2]))\n",
-        "\n",
-        "def solve(puzzle,goal):\n",
-        "  \"\"\" Main progress \"\"\"\n",
-        "\n",
-        "  path = []\n",
-        "  result = []\n",
-        "  check = {puzzle:1}\n",
-        "  gen = 0\n",
-        "  dept = 0\n",
-        "\n",
-        "  path.append([[puzzle,\"START\",h_score(puzzle,goal)]])\n",
-        "  #print(path)\n",
-        "    \n",
-        "  while path:\n",
-        "\n",
-        "    # show generation\n",
-        "    if gen % 1000 == 0:\n",
-        "      print(\"Gen: \", gen)\n",
-        "    gen += 1\n",
-        "\n",
-        "    # choose route and declare puzzle to work on\n",
-        "    current_route = path.pop(0)\n",
-        "    current_puzzle = current_route[-1][0]\n",
-        "\n",
-        "    # check if win\n",
-        "    if current_puzzle == goal:\n",
-        "      route = current_route\n",
-        "      return route\n",
-        "    \n",
-        "    # declare g score\n",
-        "    g = len(current_route)\n",
-        "\n",
-        "    # if the current_puzzle already visited once with different step then abandon this route\n",
-        "    # it will remove the route with that visite the same puzzle but take more move\n",
-        "    if check[current_puzzle] != g:\n",
-        "      continue \n",
-        "\n",
-        "    # generate possible move of blank space or \"0\" in this case\n",
-        "    next_state = gen_state(current_puzzle,possible_dir(current_puzzle))\n",
-        "\n",
-        "    # consider if the next state should be add to the route or not\n",
-        "    for state in next_state:\n",
-        "\n",
-        "      # declare puzzle and g score of the state\n",
-        "      state_puzzle = state[0]\n",
-        "      state_g = g + 1\n",
-        "\n",
-        "      # check if this puzzle have been visited before\n",
-        "      if state_puzzle in check:\n",
-        "\n",
-        "        # if visited before but g score is less than the recent then\n",
-        "        # change the visted puzzle to the lesser one\n",
-        "        if  state_g < check[state_puzzle]:\n",
-        "          check[state_puzzle] = state_g\n",
-        "          to_add_state = copy.deepcopy(current_route)\n",
-        "          state.append(h_score(state_puzzle,goal))\n",
-        "          to_add_state.append(state)\n",
-        "\n",
-        "          path.append(to_add_state)\n",
-        "\n",
-        "        # if visited before but g score is higher then do nothing\n",
-        "\n",
-        "      # if never visited before then add the data to dictionary \"check\" and add to path\n",
-        "      else:\n",
-        "        check[state_puzzle] = state_g\n",
-        "        to_add_state = copy.deepcopy(current_route)\n",
-        "        state.append(h_score(state_puzzle,goal))\n",
-        "        to_add_state.append(state)\n",
-        "        path.append(to_add_state)\n",
-        "\n",
-        "    # sort route according to the step (lengt of the route list) and h score respectively\n",
-        "    path = sorted(path, key= lambda x: (len(x), x[-1][-1]))\n",
-        "\n",
-        "\n",
-        "x = \"152703468\"\n",
-        "easy = \"123405678\"\n",
-        "another = \"870246153\"\n",
-        "solution = solve(x,\"123456780\")\n",
+        "puzz1 = \"123405678\"\n",
+        "puzz2 = \"152703468\"\n",
+        "puzz3 = \"870246153\"\n",
+        "solution = solve(puzz3,\"123456780\")\n",
         "show_puzzle(solution)"
       ],
-      "execution_count": 24,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -334,116 +305,222 @@
             "Gen:  19000\n",
             "Gen:  20000\n",
             "Gen:  21000\n",
-            "Step 0: START| g = 0 h = 10 f = 10\n",
-            "152703468\n",
-            "1 5 2\n",
-            "7 0 3\n",
-            "4 6 8\n",
+            "Gen:  22000\n",
+            "Gen:  23000\n",
+            "Gen:  24000\n",
+            "Gen:  25000\n",
+            "Gen:  26000\n",
+            "Gen:  27000\n",
+            "Gen:  28000\n",
+            "Gen:  29000\n",
+            "Gen:  30000\n",
+            "Gen:  31000\n",
+            "Gen:  32000\n",
+            "Gen:  33000\n",
+            "Gen:  34000\n",
+            "Gen:  35000\n",
+            "Gen:  36000\n",
+            "Gen:  37000\n",
+            "Gen:  38000\n",
+            "Gen:  39000\n",
+            "Gen:  40000\n",
+            "Gen:  41000\n",
+            "Gen:  42000\n",
+            "Gen:  43000\n",
+            "Gen:  44000\n",
+            "Gen:  45000\n",
+            "Gen:  46000\n",
+            "Gen:  47000\n",
+            "Gen:  48000\n",
+            "Gen:  49000\n",
+            "Gen:  50000\n",
+            "Gen:  51000\n",
+            "Gen:  52000\n",
+            "Gen:  53000\n",
+            "Gen:  54000\n",
+            "Gen:  55000\n",
+            "Gen:  56000\n",
+            "Gen:  57000\n",
+            "Gen:  58000\n",
+            "Gen:  59000\n",
+            "Gen:  60000\n",
+            "Gen:  61000\n",
+            "Gen:  62000\n",
+            "Gen:  63000\n",
+            "Gen:  64000\n",
+            "Gen:  65000\n",
+            "Gen:  66000\n",
+            "Gen:  67000\n",
+            "Gen:  68000\n",
+            "Gen:  69000\n",
+            "Gen:  70000\n",
+            "Gen:  71000\n",
+            "Gen:  72000\n",
+            "Gen:  73000\n",
+            "Gen:  74000\n",
+            "Gen:  75000\n",
+            "Gen:  76000\n",
+            "Gen:  77000\n",
+            "Gen:  78000\n",
+            "Gen:  79000\n",
+            "Gen:  80000\n",
+            "Gen:  81000\n",
+            "Gen:  82000\n",
+            "Gen:  83000\n",
+            "Gen:  84000\n",
+            "Gen:  85000\n",
+            "Gen:  86000\n",
+            "Gen:  87000\n",
+            "Gen:  88000\n",
+            "Gen:  89000\n",
+            "Gen:  90000\n",
+            "Gen:  91000\n",
+            "Gen:  92000\n",
+            "Gen:  93000\n",
+            "Gen:  94000\n",
+            "Gen:  95000\n",
+            "Gen:  96000\n",
+            "Gen:  97000\n",
+            "Gen:  98000\n",
+            "Gen:  99000\n",
+            "Gen:  100000\n",
+            "Gen:  101000\n",
+            "Gen:  102000\n",
+            "Gen:  103000\n",
+            "Gen:  104000\n",
+            "Gen:  105000\n",
+            "Gen:  106000\n",
+            "Gen:  107000\n",
+            "Gen:  108000\n",
+            "Gen:  109000\n",
+            "Gen:  110000\n",
+            "Gen:  111000\n",
+            "Gen:  112000\n",
+            "Gen:  113000\n",
+            "Gen:  114000\n",
+            "Gen:  115000\n",
+            "Gen:  116000\n",
+            "Step 0: START| g = 0 h = 16 f = 16\n",
+            "8 7 0\n",
+            "2 4 6\n",
+            "1 5 3\n",
             "\n",
-            "Step 1: LEFT| g = 1 h = 12 f = 13\n",
-            "152073468\n",
-            "1 5 2\n",
+            "Step 1: DOWN| g = 1 h = 16 f = 17\n",
+            "8 7 6\n",
+            "2 4 0\n",
+            "1 5 3\n",
+            "\n",
+            "Step 2: DOWN| g = 2 h = 14 f = 16\n",
+            "8 7 6\n",
+            "2 4 3\n",
+            "1 5 0\n",
+            "\n",
+            "Step 3: LEFT| g = 3 h = 16 f = 19\n",
+            "8 7 6\n",
+            "2 4 3\n",
+            "1 0 5\n",
+            "\n",
+            "Step 4: UP| g = 4 h = 18 f = 22\n",
+            "8 7 6\n",
+            "2 0 3\n",
+            "1 4 5\n",
+            "\n",
+            "Step 5: UP| g = 5 h = 18 f = 23\n",
+            "8 0 6\n",
+            "2 7 3\n",
+            "1 4 5\n",
+            "\n",
+            "Step 6: LEFT| g = 6 h = 18 f = 24\n",
+            "0 8 6\n",
+            "2 7 3\n",
+            "1 4 5\n",
+            "\n",
+            "Step 7: DOWN| g = 7 h = 16 f = 23\n",
+            "2 8 6\n",
             "0 7 3\n",
-            "4 6 8\n",
+            "1 4 5\n",
             "\n",
-            "Step 2: DOWN| g = 2 h = 10 f = 12\n",
-            "152473068\n",
-            "1 5 2\n",
-            "4 7 3\n",
+            "Step 8: DOWN| g = 8 h = 14 f = 22\n",
+            "2 8 6\n",
+            "1 7 3\n",
+            "0 4 5\n",
+            "\n",
+            "Step 9: RIGHT| g = 9 h = 12 f = 21\n",
+            "2 8 6\n",
+            "1 7 3\n",
+            "4 0 5\n",
+            "\n",
+            "Step 10: UP| g = 10 h = 12 f = 22\n",
+            "2 8 6\n",
+            "1 0 3\n",
+            "4 7 5\n",
+            "\n",
+            "Step 11: UP| g = 11 h = 12 f = 23\n",
+            "2 0 6\n",
+            "1 8 3\n",
+            "4 7 5\n",
+            "\n",
+            "Step 12: RIGHT| g = 12 h = 12 f = 24\n",
+            "2 6 0\n",
+            "1 8 3\n",
+            "4 7 5\n",
+            "\n",
+            "Step 13: DOWN| g = 13 h = 10 f = 23\n",
+            "2 6 3\n",
+            "1 8 0\n",
+            "4 7 5\n",
+            "\n",
+            "Step 14: LEFT| g = 14 h = 12 f = 26\n",
+            "2 6 3\n",
+            "1 0 8\n",
+            "4 7 5\n",
+            "\n",
+            "Step 15: UP| g = 15 h = 12 f = 27\n",
+            "2 0 3\n",
+            "1 6 8\n",
+            "4 7 5\n",
+            "\n",
+            "Step 16: LEFT| g = 16 h = 12 f = 28\n",
+            "0 2 3\n",
+            "1 6 8\n",
+            "4 7 5\n",
+            "\n",
+            "Step 17: DOWN| g = 17 h = 10 f = 27\n",
+            "1 2 3\n",
             "0 6 8\n",
+            "4 7 5\n",
             "\n",
-            "Step 3: RIGHT| g = 3 h = 10 f = 13\n",
-            "152473608\n",
-            "1 5 2\n",
-            "4 7 3\n",
-            "6 0 8\n",
+            "Step 18: DOWN| g = 18 h = 8 f = 26\n",
+            "1 2 3\n",
+            "4 6 8\n",
+            "0 7 5\n",
             "\n",
-            "Step 4: UP| g = 4 h = 10 f = 14\n",
-            "152403678\n",
-            "1 5 2\n",
-            "4 0 3\n",
-            "6 7 8\n",
+            "Step 19: RIGHT| g = 19 h = 6 f = 25\n",
+            "1 2 3\n",
+            "4 6 8\n",
+            "7 0 5\n",
             "\n",
-            "Step 5: UP| g = 5 h = 10 f = 15\n",
-            "102453678\n",
-            "1 0 2\n",
-            "4 5 3\n",
-            "6 7 8\n",
+            "Step 20: RIGHT| g = 20 h = 4 f = 24\n",
+            "1 2 3\n",
+            "4 6 8\n",
+            "7 5 0\n",
             "\n",
-            "Step 6: LEFT| g = 6 h = 12 f = 18\n",
-            "012453678\n",
-            "0 1 2\n",
-            "4 5 3\n",
-            "6 7 8\n",
-            "\n",
-            "Step 7: DOWN| g = 7 h = 12 f = 19\n",
-            "412053678\n",
-            "4 1 2\n",
-            "0 5 3\n",
-            "6 7 8\n",
-            "\n",
-            "Step 8: DOWN| g = 8 h = 10 f = 18\n",
-            "412653078\n",
-            "4 1 2\n",
-            "6 5 3\n",
-            "0 7 8\n",
-            "\n",
-            "Step 9: RIGHT| g = 9 h = 8 f = 17\n",
-            "412653708\n",
-            "4 1 2\n",
-            "6 5 3\n",
-            "7 0 8\n",
-            "\n",
-            "Step 10: UP| g = 10 h = 10 f = 20\n",
-            "412603758\n",
-            "4 1 2\n",
-            "6 0 3\n",
-            "7 5 8\n",
-            "\n",
-            "Step 11: LEFT| g = 11 h = 10 f = 21\n",
-            "412063758\n",
-            "4 1 2\n",
-            "0 6 3\n",
-            "7 5 8\n",
-            "\n",
-            "Step 12: UP| g = 12 h = 10 f = 22\n",
-            "012463758\n",
-            "0 1 2\n",
-            "4 6 3\n",
-            "7 5 8\n",
-            "\n",
-            "Step 13: RIGHT| g = 13 h = 8 f = 21\n",
-            "102463758\n",
-            "1 0 2\n",
-            "4 6 3\n",
-            "7 5 8\n",
-            "\n",
-            "Step 14: RIGHT| g = 14 h = 6 f = 20\n",
-            "120463758\n",
-            "1 2 0\n",
-            "4 6 3\n",
-            "7 5 8\n",
-            "\n",
-            "Step 15: DOWN| g = 15 h = 4 f = 19\n",
-            "123460758\n",
+            "Step 21: UP| g = 21 h = 4 f = 25\n",
             "1 2 3\n",
             "4 6 0\n",
             "7 5 8\n",
             "\n",
-            "Step 16: LEFT| g = 16 h = 4 f = 20\n",
-            "123406758\n",
+            "Step 22: LEFT| g = 22 h = 4 f = 26\n",
             "1 2 3\n",
             "4 0 6\n",
             "7 5 8\n",
             "\n",
-            "Step 17: DOWN| g = 17 h = 2 f = 19\n",
-            "123456708\n",
+            "Step 23: DOWN| g = 23 h = 2 f = 25\n",
             "1 2 3\n",
             "4 5 6\n",
             "7 0 8\n",
             "\n",
-            "Step 18: RIGHT| g = 18 h = 0 f = 18\n",
-            "123456780\n",
+            "Step 24: RIGHT| g = 24 h = 0 f = 24\n",
             "1 2 3\n",
             "4 5 6\n",
             "7 8 0\n",
